[package]
name = "mirrord-protocol"
version = "0.0.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/metalbear/mirrord-protocol"
authors = ["Aviram <aviram@metalbear.co>", "Eyal <eyal@metalbear.co>"]

[dependencies]
actix-codec = "0.5"
bincode = "2.0.0-rc.1"
bytes = "1"